[metadata]
name = nvdocker
version = 0.0.2a3
author = ACM@UIUC
author-email = acm@illinois.edu
summary = Python interface for NVIDIA Docker 
description-file = 
    README.rst
home-page = https://github.com/acm-uiuc/nvdocker
requires-dist = setuptools
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: University of Illinois/NCSA Open Source License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Operating System :: POSIX :: Linux

[bdist_wheel]
universal = 1